@@ -5,7 +5,6 @@ import java.util.concurrent.*;
 import java.util.function.*;
 import java.util.stream.*;
 
-import org.apache.commons.lang3.StringUtils;
 import org.example.utils.Helpers;
 import org.example.utils.Helpers.Node;
 import org.example.utils.dto.AnimalCareTaker;
@@ -19,16 +18,11 @@ import lombok.*;
 import static java.util.Map.Entry.*;
 import static java.util.stream.Collectors.*;
 import java.io.*;
-import java.lang.foreign.Arena;
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.Linker;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SymbolLookup;
-import java.lang.foreign.ValueLayout;
+import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 import java.math.*;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import static java.nio.charset.StandardCharsets.*;
+import java.nio.file.*;
 import java.text.*;
 import java.time.LocalDateTime;
 
@@ -40,22 +34,39 @@ public class Learning {
 
 class JavaFileIO {
     public static void main(String[] args) {
-        accessingResourcesUsingPaths();
+        // accessingResourcesUsingPaths();
+        accessingResourcesUsingClazz();
     }
 
+    @SneakyThrows(IOException.class)
     static void accessingResourcesUsingClazz() {
+        @Cleanup
+        final var is = JavaFileIO.class.getResourceAsStream("/mockdata/data.csv");
+        if (is == null) {
+            throw new IOException("Resource not found: /mockdata/data.csv");
+        }
+        // read all lines from the input stream
+        @Cleanup
+        final var reader = new BufferedReader(new InputStreamReader(is, UTF_8));
+        // deserialize each line to Employee object
+        final List<Employee> employees = reader.lines()
+                .skip(1)
+                .map(Employee::fromCsvLine)
+                .toList();
+        // print out the employees
+        employees.forEach(System.out::println);
     }
 
     static void accessingResourcesUsingPaths() {
         // 1. read data.csv then deserialize it to a List Employee (use Path)
-        final var dataCsvFile = Paths.get("src", "main", "resources", "mockdata", "data.csv");
+        final Path dataCsvFile = Paths.get("src", "main", "resources", "mockdata", "data.csv");
         // read all lines from the file
-        try (final var lines = Files.lines(dataCsvFile)) {
+        try (final Stream<String> lines = Files.lines(dataCsvFile)) {
             // deserialize each line to Employee object
             // ignore header line
             final List<Employee> employees = lines.skip(1)
                     .map(Employee::fromCsvLine)
-                    .collect(Collectors.toList());
+                    .toList();
             // print out the employees
             employees.forEach(System.out::println);
         } catch (Exception e) {
